--- a/files/套票详情/styles.css
+++ b/files/套票详情/styles.css
@@ -19613,7 +19613,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:257px;
+  width:171px;
   height:54px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -19622,7 +19622,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Microsoft YaHei';
+  font-family:'PingFangSC-Regular', 'PingFang SC';
   font-weight:400;
   font-style:normal;
   font-size:14px;
@@ -19633,9 +19633,9 @@
   position:absolute;
   left:276px;
   top:99px;
-  width:257px;
+  width:171px;
   height:54px;
-  font-family:'Microsoft YaHei';
+  font-family:'PingFangSC-Regular', 'PingFang SC';
   font-weight:400;
   font-style:normal;
   font-size:14px;
@@ -19646,7 +19646,7 @@
   position:absolute;
   left:32px;
   top:16px;
-  width:225px;
+  width:139px;
   white-space:nowrap;
 }
 #u929_div {
@@ -21490,6 +21490,16 @@
   top:0px;
   width:62px;
   height:1080px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
+}
+#u990 {
+  border-width:0px;
+  position:absolute;
+  left:290px;
+  top:112px;
+  width:86px;
+  height:28px;
   overflow:hidden;
   background-image:url('../../resources/images/transparent.gif');
 }
