--- a/data/styles.css
+++ b/data/styles.css
@@ -7,6 +7,8 @@
   text-align:center;
   line-height:normal;
 }
+._图片_ {
+}
 ._一级标题 {
   font-family:'ArialMT', 'Arial';
   font-weight:bold;
@@ -51,33 +53,35 @@
 ._文本段落 {
   text-align:left;
 }
-._流程形状 {
+.tree_node {
+  text-align:left;
 }
-.box_2 {
-  font-family:'Helvetica';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  color:#FFFFFF;
-  text-align:center;
-  line-height:22px;
+._流程形状 {
 }
 .image {
   color:#000000;
 }
+.vertical_line {
+}
 .label {
   font-size:14px;
   text-align:left;
+}
+.horizontal_line {
 }
 .shape {
 }
 .box_3 {
   color:#FFFFFF;
 }
+.ellipse {
+}
 .image1 {
 }
 .paragraph {
   text-align:left;
+}
+.line {
 }
 .box_1 {
 }
@@ -88,7 +92,7 @@
   font-size:32px;
   text-align:left;
 }
-.box_21 {
+.box_2 {
 }
 .iconfont {
   font-family:'iconfont';
@@ -103,4 +107,31 @@
   font-style:normal;
   font-size:24px;
   text-align:left;
+}
+._256*40二级菜单（选中） {
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:#FFFFFF;
+  text-align:left;
+  line-height:22px;
+}
+._256*40二级菜单（未选中） {
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:rgba(255, 255, 255, 0.647058823529412);
+  text-align:left;
+  line-height:22px;
+}
+.box_21 {
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:#FFFFFF;
+  text-align:center;
+  line-height:22px;
 }
