周一更新 日期和代号查询条件换位置 增加导出功能入口 经销商管理增加编号列 票据管理增加经销商编号列

--- a/data/styles.css
+++ b/data/styles.css
@@ -9,6 +9,8 @@
 }
 ._图片_ {
 }
+.button {
+}
 ._一级标题 {
   font-family:'ArialMT', 'Arial';
   font-weight:bold;
@@ -51,6 +53,10 @@
   text-align:left;
 }
 ._文本段落 {
+  text-align:left;
+}
+.droplist {
+  color:#000000;
   text-align:left;
 }
 .tree_node {
