去掉左侧菜单的收缩功能

--- a/files/经销商管理/styles.css
+++ b/files/经销商管理/styles.css
@@ -4243,7 +4243,32 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u131_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:15px;
+}
 #u131 {
+  border-width:0px;
+  position:absolute;
+  left:284px;
+  top:25px;
+  width:20px;
+  height:15px;
+}
+#u131_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u132 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -4251,7 +4276,7 @@
   width:0px;
   height:0px;
 }
-#u132_div {
+#u133_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -4279,7 +4304,7 @@
   font-style:normal;
   text-align:left;
 }
-#u132 {
+#u133 {
   border-width:0px;
   position:absolute;
   left:256px;
@@ -4291,7 +4316,7 @@
   font-style:normal;
   text-align:left;
 }
-#u132_text {
+#u133_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -4300,7 +4325,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u133_div {
+#u134_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -4320,7 +4345,7 @@
   font-size:14px;
   line-height:22px;
 }
-#u133 {
+#u134 {
   border-width:0px;
   position:absolute;
   left:256px;
@@ -4333,7 +4358,7 @@
   font-size:14px;
   line-height:22px;
 }
-#u133_text {
+#u134_text {
   border-width:0px;
   position:absolute;
   left:32px;
@@ -4341,7 +4366,7 @@
   width:157px;
   white-space:nowrap;
 }
-#u134_div {
+#u135_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -4362,7 +4387,7 @@
   color:rgba(0, 0, 0, 0.847058823529412);
   line-height:28px;
 }
-#u134 {
+#u135 {
   border-width:0px;
   position:absolute;
   left:256px;
@@ -4376,7 +4401,7 @@
   color:rgba(0, 0, 0, 0.847058823529412);
   line-height:28px;
 }
-#u134_text {
+#u135_text {
   border-width:0px;
   position:absolute;
   left:32px;
@@ -4384,7 +4409,7 @@
   width:101px;
   white-space:nowrap;
 }
-#u135_div {
+#u136_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -4400,7 +4425,7 @@
   box-shadow:none;
   color:#FFFFFF;
 }
-#u135 {
+#u136 {
   border-width:0px;
   position:absolute;
   left:256px;
@@ -4409,7 +4434,7 @@
   height:24px;
   color:#FFFFFF;
 }
-#u135_text {
+#u136_text {
   border-width:0px;
   position:absolute;
   left:2px;
